app/public/style/styles.css
/* Media queries */
@font-face {
   font-family: CircularStd-Black;
   src: url(fonts/CircularStd/CircularStd-Black.otf);
}

@font-face {
   font-family: CircularStd-BlackItalic;
   src: url(fonts/CircularStd/CircularStd-BlackItalic.otf);
}

@font-face {
   font-family: CircularStd-Bold;
   src: url(fonts/CircularStd/CircularStd-Bold.otf);
}

@font-face {
   font-family: CircularStd-BoldItalic;
   src: url(fonts/CircularStd/CircularStd-BoldItalic.otf);
}

@font-face {
   font-family: CircularStd-Book;
   src: url(fonts/CircularStd/CircularStd-Book.otf);
}

@font-face {
   font-family: CircularStd-BookItalic;
   src: url(fonts/CircularStd/CircularStd-BookItalic.otf);
}

@font-face {
   font-family: CircularStd-Light;
   src: url(fonts/CircularStd/CircularStd-Light.otf);
}

@font-face {
   font-family: CircularStd-LightItalic;
   src: url(fonts/CircularStd/CircularStd-LightItalic.otf);
}

@font-face {
   font-family: CircularStd-Medium;
   src: url(fonts/CircularStd/CircularStd-Medium.otf);
}

@font-face {
   font-family: CircularStd-MediumItalic;
   src: url(fonts/CircularStd/CircularStd-MediumItalic.otf);
}

/* HTML Tags */
header {
   display: grid;
   grid-template-columns: repeat(7,1fr);
   background-color: #EDE5BB;
   grid-column: 2/7;
   align-items: center;
   border-radius: 20px;
   box-shadow: 2px 2px 5px grey;
}

/* Classes */

nav {
   grid-column: 2/7;
   font-family: Caveat;
}

nav ul {
   display: flex;
   justify-content: space-between;
   padding-left: 0px;
}

nav li {
   list-style-type: none;
}

body {
   background-color: #EDE5BB;
}

main {
   grid-column: 2/7;
   font-family: CircularStd-Book;
   color: #95261F;
   border-radius: 50px;
   background-color: #EDE5BB;
   box-shadow: 4px 4px 10px 9px rgba(0, 0, 0, 0.25);
}

footer {
   background-color: yellowgreen;
   grid-column: 2/7;
}

a {
   text-decoration: none;
   color: #95261F;
}

body h2 {
   font-size: 3em;
}

body h3 {
   font-size: 1.5em;
}

body p {
   font-size: 1em;
}

main h2 {
   margin: 0;
   padding: 30px 40px;
   font-weight: 600;
}

/* Classes */
.gridContainer {
   display: grid;
   grid-template-columns: repeat(7,1fr);
}

.logo {
   height: 50px;
   width: auto;
}

.recipe {
   border-radius: 50px;
   outline: 4px solid #95261F;
   outline-offset: -3px;
   margin: 21px 40px 0px 40px;
   display: flex;
   margin-right: 60px;
   margin-left: 60px;
   justify-content: space-between;
}

.first {
   margin-top: 0;
}

.last {
   margin-bottom: 0;
}

.button {
   text-decoration: none;
   color: #EDE5BB;
   font-family: CircularStd-BookItalic;
   background-color: #95261F;
   border-radius: 50px;
   height: 64px;
   width: 368px;
   font-size: 2.5em;
   display: flex;
   justify-content: center;
   align-items: center;
   margin: 0 25px 10px 0;
}

.recipe img {
   border-radius: 50px;
   width: 276px;
   height: 276px;
   object-fit: cover;
   flex-shrink: 0;
   outline: 4px solid #95261F;
   outline-offset: -3px;
}

.content {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   align-items: flex-end;
   width: 100%;
}

.content div h3 {
   margin-bottom: 10px;
}

.content div p {
   position: relative;
   left: 10px;
   font-family: CircularStd-Light;
   font-size: 1.8em;
   margin-top: 15px;
}

.content div {
   margin-right: auto;
   margin-left: 4%;
}

.subGrid {
   display: grid;
   grid-template-columns: repeat(8,1fr);
   margin-bottom: 50px;
}

.mapsFrame {
   grid-column: 1/5;
   margin-left: 60px;
}

.sideContent {
   grid-column: 5/9;
   margin-right: 60px;
   margin-left: 135px;
   
   display: flex;
   justify-content: space-evenly;
}

.sideContent p {
   font-family: CircularStd-Light;
   font-size: 1.2em;
}

.sideContent div h4 {
   font-family: CircularStd-Light;
   font-size: 1.6em;
}

.sideContent table {
   font-family: CircularStd-Light;
   font-size: 1.2em;
   line-height: 1.7;
}

.boldParagraph {
   font-weight: bold;
}

/* IDs */
#logo {
   height: 300px;
}

#findUsHeading {
   margin-right: 60px;
   margin-left: 60px;
}

#map {
   border-style: solid;
   border-width: 2px;
   height: 500px;
   width: 800px;
}

#contactContainer div p {
   margin-right: 30px;
}

#contactContainer div p {
   line-height: 0.7;
}

#emailBlock {
   margin-top: 50px;
}

